# tdd-com-python

./: .gitignore  functional_tests.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  django.yml
accounts/: authentication.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
functional_tests/: base.py  test_layout_and_styling.py  test_list_item_validation.py  test_simple_list_creation.py  tests.py
lists/: forms.py  tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py  0005_auto_20211221_1954.py
lists/static/: list.js
lists/static/tests/: test.html
lists/templates/: base.html  home.html  list.html
lists/tests/: test_forms.py  test_models.py  test_views.py
superlists/: settings.py  urls.py
