[tool.poetry]
name = "tdd"
version = "0.1.0"
description = ""
authors = ["Juan"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
