[tool.poetry]
name = "tdd"
version = "0.1.0"
description = ""
authors = ["Juan"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]
selenium = "^4.1.3"
black = {version = "^22.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
